# iris_simulator_gazebo_2023

./: README.md  env_setup.sh  init_make.sh
.github/workflows/: build..yaml
Assets/Photoshop/: KRI_NASIONAL_FIELD.psd
src/gazebo/: CMakeLists.txt  package.xml
src/gazebo/launch/: iris_gazebo.launch
src/gazebo/models/ball/: model.config  model.sdf
src/gazebo/models/ball/materials/scripts/: bola.material
src/gazebo/models/field/national/: model.sdf
src/gazebo/worlds/: national.world
src/gazebo_iris/: CMakeLists.txt  package.xml
src/gazebo_iris/launch/: iris_gazebo.launch
src/gazebo_iris/models/ball/: model.config  model.sdf
src/gazebo_iris/models/ball/materials/scripts/: ball.material
src/gazebo_iris/models/goal/meshes/: base_link.stl
src/gazebo_iris/models/goal/urdf/: Goal.gazebo  Goal.trans  Goal.xacro  materials.xacro
src/gazebo_iris/models/national/: model.config  model.sdf
src/gazebo_iris/models/national/materials/scripts/: kri_nasional.material
src/gazebo_iris/scripts/: spawn_ball.sh
src/gazebo_iris/worlds/: national.world
